[package]
name = "socks5"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
futures = "0.3.4"
bytes = "0.5.4"
tokio = { version = "0.2.13", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["full"] }
trust-dns-resolver = "0.19.3"

[[bin]]
name = "socks5"
path = "main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
#panic = "abort"

